# Source/Events/Events.Server/Data/Db/ApiKeyConfig.cs
@@ -1,0 +1,10 @@
+﻿using System.ComponentModel.DataAnnotations;
+
+namespace Events.Server.Data.Db;
+
+public class ApiKeyConfig
+{
+    [Key]
+    public required string ApiKey { get; set; }
+    public required string[] Roles { get; set; }
+}
